--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -8,6 +8,7 @@ gem 'aws-sdk-s3'
 gem 'carrierwave'
 gem 'coffee-rails', '~> 4.2'
 gem 'fog-aws'
+gem 'ipaddress'
 gem 'jbuilder', '~> 2.5'
 gem 'jquery-rails'
 gem 'mysql2', '>= 0.4.4', '< 0.6.0'
