--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 
 gem 'rails', '~> 5.2.6'
 
-gem 'bizside', :path => '..'
+gem 'bizside', path: '..'
 gem 'aws-sdk-s3'
 gem 'carrierwave'
 gem 'coffee-rails', '~> 4.2'
@@ -13,7 +13,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'jquery-rails'
 gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'nokogiri'
-gem 'sqlite3', '~> 1.3.6'
+gem 'sqlite3', '>= 1.3', '< 1.5.0'
 gem 'redis', '~> 4.0'
 gem 'request-log-analyzer'
 gem 'resque'
@@ -25,7 +25,7 @@ gem 'uglifier', '>= 1.3.0'
 
 group :development, :test do
   gem 'byebug'
-  gem 'cucumber', '~> 3.2'
+  gem 'cucumber'
 end
 
 group :development do
