--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -1,9 +1,10 @@
 source 'https://rubygems.org'
 
-
-gem 'rails', '~> 5.2.6'
+rails_version = ENV.fetch('RAILS_VERSION', '5.2.x')
+gem 'rails', "~> #{rails_version}"
 
 gem 'bizside', path: '..'
+
 gem 'aws-sdk-s3'
 gem 'carrierwave'
 gem 'coffee-rails', '~> 4.2'
@@ -11,15 +12,16 @@ gem 'fog-aws'
 gem 'ipaddress'
 gem 'jbuilder', '~> 2.5'
 gem 'jquery-rails'
+gem 'mail', '~> 2.7.1'
 gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'nokogiri'
-gem 'sqlite3', '>= 1.3', '< 1.5.0'
 gem 'redis', '~> 4.0'
 gem 'request-log-analyzer'
 gem 'resque'
 gem 'resque-scheduler'
 gem 'rmagick'
 gem 'sass-rails', '~> 5.0'
+gem 'sqlite3', '>= 1.3', '< 1.6.0'
 gem 'turbolinks'
 gem 'uglifier', '>= 1.3.0'
 
@@ -34,13 +36,13 @@ group :development do
 end
 
 group :test do
-  gem 'RedCloth'
   gem 'database_cleaner'
   gem 'minitest', '~> 5.15.0'
   gem 'minitest-rails'
   gem 'minitest-reporters'
   gem 'puma'
   gem 'rails-controller-testing'
+  gem 'RedCloth'
   gem 'simplecov'
   gem 'simplecov-rcov'
   gem 'webmock'
