--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -14,7 +14,7 @@ jobs:
         rails-version: [5.2.x, 6.1.x]
     env:
       RAILS_VERSION: ${{ matrix.rails-version }}
-      CONFIG_FILE: bizside_test_app/config/bizside.yml
+      CONFIG_FILE: ./config/bizside.yml
 
     steps:
       - uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
         run: bundle install -j4
         working-directory: ./bizside_test_app
       - name: Set environment variables
-        run: echo >> "CONFIG_FILE=bizside_test_app/config/bizside_rails6.yml" >> $GITHUB_ENV
+        run: echo 'CONFIG_FILE=./config/bizside_rails6.yml' >> $GITHUB_ENV
         if: ${{ matrix.rails-version == '6.1.x' }}
       - name: Run tests
         run: rails test
