--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -27,7 +27,7 @@ gem 'uglifier', '>= 1.3.0'
 
 group :development, :test do
   gem 'byebug'
-  gem 'cucumber'
+  gem 'cucumber', '~> 7.1'
 end
 
 group :development do
