--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-rails_version = ENV.fetch('RAILS_VERSION', '5.2.x')
+rails_version = ENV.fetch('RAILS_VERSION', '6.1.x')
 gem 'rails', "~> #{rails_version}"
 
 gem 'bizside', path: '..'
@@ -18,7 +18,7 @@ gem 'nokogiri'
 gem 'redis', '~> 4.0'
 gem 'request-log-analyzer'
 gem 'resque'
-gem 'resque-scheduler'
+gem 'resque-scheduler', '~> 4.8.0'
 gem 'rmagick'
 gem 'sass-rails', '~> 5.0'
 gem 'sqlite3', '>= 1.3', '< 1.6.0'
