--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -18,15 +18,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y libsqlite3-dev libmagic-dev libmagick++-dev
+          sudo apt clean all
       - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install libsqlite3-dev libmagic-dev libmagick++-dev
       - name: Install gem
         run: bundle exec rake install
       - name: Set up test app
