--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -8,6 +8,7 @@ gem 'bizside', path: '..'
 gem 'aws-sdk-s3'
 gem 'carrierwave'
 gem 'coffee-rails', '~> 4.2'
+gem 'ffi', '< 1.17.0'
 gem 'fog-aws'
 gem 'ipaddress'
 gem 'jbuilder', '~> 2.5'
@@ -18,7 +19,7 @@ gem 'nokogiri'
 gem 'redis', '~> 4.0'
 gem 'request-log-analyzer'
 gem 'resque'
-gem 'resque-scheduler'
+gem 'resque-scheduler', '< 4.9.0'
 gem 'rmagick'
 gem 'sass-rails', '~> 5.0'
 gem 'sqlite3', '>= 1.3', '< 1.6.0'
