--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -25,6 +25,11 @@ gem 'sqlite3', '>= 1.3', '< 1.6.0'
 gem 'turbolinks'
 gem 'uglifier', '>= 1.3.0'
 
+# Prevent error `uninitialized constant ActiveSupport::LoggerThreadSafeLevel::Logger (NameError)`
+if rails_version < '7.1'
+  gem 'concurrent-ruby', '1.3.4'
+end
+
 group :development, :test do
   gem 'byebug'
   gem 'cucumber', '~> 7.1'
