## 3.1.2   * カバレッジレポートの出力から rcov 形式を削除

--- a/bizside_test_app/Gemfile
+++ b/bizside_test_app/Gemfile
@@ -48,8 +48,7 @@ group :test do
   gem 'puma'
   gem 'rails-controller-testing'
   gem 'RedCloth'
-  gem 'simplecov'
-  gem 'simplecov-rcov'
+  gem 'simplecov', require: false
   gem 'webmock'
 end
 
